--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 
 <body>
+    <h2>Technologies</h2>
+    <svg id="techChart" width="500" height="500" viewBox="0 0 500 500"></svg>
+
+    <h2>Tech Skills</h2>
+    <svg id="skillChart" width="500" height="500" viewBox="0 0 500 500"></svg>
+
     <div class="nav">
         <button type="button" id="logout" class="btn">logout</button>
     </div>
@@ -34,6 +40,7 @@
     </div>
     <script type="module" src="login.js"></script>
     <script type="module" src="query.js"></script>
+    <script type="module" src="skills.js"></script>
 </body>
 
 </html>
