--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script type="module" src="login.js"></script>
     <script type="module" src="query.js"></script>
     <script type="module" src="skills.js"></script>
+    <script type="module" src="experience.js"></script>
 </body>
 
 </html>
