--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <div class="nav">
         <button type="button" id="logout" class="btn">logout</button>
     </div>
-    <h2>Technologies</h2>
-    <svg id="techChart" width="500" height="500" viewBox="0 0 500 500"></svg>
 
-    <h2>Tech Skills</h2>
-    <svg id="skillChart" width="500" height="500" viewBox="0 0 500 500"></svg>
-
+    <div class="graphs" style="display: none;">
+        <h2>Technologies</h2>
+        <svg id="techChart" width="500" height="500" viewBox="0 0 500 500"></svg>
+        <h2>Tech Skills</h2>
+        <svg id="skillChart" width="500" height="500" viewBox="0 0 500 500"></svg>
+    </div>
 
     <div class="wrapper-login">
         <h2>Login Form</h2>
