--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link id="fav" rel="shortcut icon" type="image/x-icon" href="data:image/x-icon;,">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="./static/style.css">
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <title>Graphql</title>
 </head>
