--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link id="fav" rel="shortcut icon" type="image/x-icon" href="data:image/x-icon;,">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="./static/style.css">
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <title>Graphql</title>
 </head>
 
 <body>
-    <div id="background"></div>
     <div class="nav">
         <button type="button" id="logout" class="btn">logout</button>
     </div>
-
+    <div id="background"></div>
     <div class="graphs" style="display: none;">
         <h2>Technologies</h2>
         <svg id="techChart" width="500" height="500" viewBox="0 0 500 500"></svg>
