--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         </form>
         <p id="error-message" style="color: red;"></p>
     </div>
-    <script type="module" src="login.js"></script>
-    <script type="module" src="query.js"></script>
-    <script type="module" src="skills.js"></script>
-    <script type="module" src="experience.js"></script>
+    <script type="module" src="./js/login.js"></script>
+    <script type="module" src="./sj/query.js"></script>
+    <script type="module" src="./js/skills.js"></script>
+    <script type="module" src="./js/experience.js"></script>
 </body>
 
 </html>
