--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>Tech Skills</h2>
         <svg id="skillChart" width="500" height="500" viewBox="0 0 500 500"></svg>
     </div>
-
+    <div class="user"></div>
     <div class="wrapper-login">
         <h2>Login Form</h2>
         <form id="loginForm">
