--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div id="background"></div>
     <div class="graphs" style="display: none;">
         <h2>Technologies</h2>
-        <svg id="techChart" width="500" height="500" viewBox="0 0 500 500"></svg>
+        <svg id="techChart" width="400" height="400" viewBox="0 0 400 400"></svg>
         <h2>Tech Skills</h2>
-        <svg id="skillChart" width="500" height="500" viewBox="0 0 500 500"></svg>
+        <svg id="skillChart" width="400" height="400" viewBox="0 0 400 400"></svg>
     </div>
     <div class="user"></div>
     <div class="wrapper-login">
@@ -42,7 +42,7 @@
         <p id="error-message" style="color: red;"></p>
     </div>
     <script type="module" src="./js/login.js"></script>
-    <script type="module" src="./sj/query.js"></script>
+    <script type="module" src="./js/query.js"></script>
     <script type="module" src="./js/skills.js"></script>
     <script type="module" src="./js/experience.js"></script>
 </body>
